--- a/app/templates/all.html
+++ b/app/templates/all.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 
 {% block content %}
-<div class="container-fluid" style="background-color: #778beb;">
+<div class="container-fluid" style="background-image: url({{ url_for('static', filename='photos/blogback.jpg') }});">
     <div class="row">
         <div class="col-md-4">
             {% for post in posts %}
