--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
 
 
 
-<div class="container-fluid" style="background-color: #778beb;">
+<div class="container-fluid" style="background-image: url({{ url_for('static', filename='photos/blogback.jpg') }});">
     <div class="row">
         <h2 style="color: white;text-align: center; padding-top: 50px; font-family: 'Press Start 2P', cursive;
                 font-family: 'Yellowtail', cursive; font-weight: 900;">WELCOME BLOGER</h2>
@@ -29,7 +29,7 @@
             <div class="col-md-3">
                 <div class="card">
                     <div class="card-header">
-                        <h2 style="color: white;">Quote of the day...</h2>
+                        <h2 style="color: Yellow;">Quote of the day...</h2>
                     </div>
                     <div class="card-body">
                         <blockquote class="blockquote text-center">
@@ -58,7 +58,7 @@
 
             </div>
             <div class="col-md-3">
-                <h2 style="color: white; font-size: 20px;">Please subscribe to my page</h2>
+                <h2 style="color: yellow; font-size: 20px;">subscribe for more</h2>
                 <div class="w-50">
                     {% for message in get_flashed_messages() %}
                     <div class="alert alert-success">
