--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Blog</title>
-    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+    <title>BLOG4U</title>
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap" rel="stylesheet">  
 
   </head>
   <body>
@@ -16,13 +16,13 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a style="font-size:50px; color: brown; font-family: 'Yellowtail', cursive;" class="navbar-brand" href="/"> Personal Blog </a>
+                <a style="font-size:50px; color: brown; font-family: 'Sansita Swashed', cursive;" class="navbar-brand" href="/"> BLOG4U </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li style="margin-left: 30px; font-size: 25px; font-family: 'Yellowtail', cursive;"><a href="/">Home</a></li>
-                    <li style="margin-left: 30px; font-size: 25px; font-family: 'Yellowtail', cursive;"><a href="{{url_for('main.post')}}">Posts</a></li>
-                    <li style="margin-left: 30px; font-size: 25px; font-family: 'Yellowtail', cursive;"><a href="{{ url_for('main.all')}}">All post</a></li>
+                    <li style="margin-left: 30px; font-size: 25px; font-family: 'Sansita Swashed', cursive;"><a href="/">HOME</a></li>
+                    <li style="margin-left: 30px; font-size: 25px; font-family: 'Sansita Swashed', cursive;"><a href="{{url_for('main.post')}}">POSTS</a></li>
+                    <li style="margin-left: 30px; font-size: 25px; font-family: 'Sansita Swashed', cursive;"><a href="{{ url_for('main.all')}}">ALL POSTS</a></li>
                     
                 </ul>
 
@@ -30,10 +30,10 @@
                 <ul class="nav navbar-nav navbar-right">
                   {% if current_user.is_authenticated %}
 
-                  <li style=" font-family: 'Yellowtail', cursive;font-size:30px;"><a  style="color: brown;" href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
-                  <li style=" font-family: 'Yellowtail', cursive; font-size: 30px;"><a style="color: brown;" href="{{url_for('auth.logout')}}">Sign out</a></li>
+                  <li style=" font-family: 'Sansita Swashed', cursive;font-size:30px;"><a  style="color: brown;" href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
+                  <li style=" font-family: 'Sansita Swashed', cursive; font-size: 30px;"><a style="color: brown;" href="{{url_for('auth.logout')}}">Sign out</a></li>
                   {% else %}
-                  <li style="font-size: 30px; font-family: 'Yellowtail', cursive;"><a style="color: brown;" href="{{url_for('auth.login')}}">Sign in</a></li>
+                  <li style="font-family: 'Sansita Swashed', cursive;"><a style="color: brown;" href="{{url_for('auth.login')}}">Sign in</a></li>
                   {%endif%}
                 </ul>
             </div>     
